--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -3,10 +3,14 @@
     background-color: black;
     color: white;
     padding: 10px;
+    
 }
 #main-footer{
     text-align:center;
+    font-size: 13px;
 }
 body{
     background-color: #f4f4f4;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6em;
 }
