--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -14,3 +14,11 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6em;
 }
+.container{
+    width: 80%;
+    margin: auto;
+}
+.box-1{
+    background-color:crimson;
+    
+}
