--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,7 +6,7 @@
     
 }
 #main-footer{
-    color: rgb(0, 0, 0);
+    color: #FFBA00;
     text-align:center;
     font-size: 13px;
 }
@@ -19,6 +19,7 @@
     color: rgb(0, 0, 0);
     width: 75%;
     margin: auto;
+    overflow: hidden;
 }
 .container-center{
     justify-content: center;
@@ -49,5 +50,19 @@
 }
 .navbar a{
     padding-right: 15px;
+    font-size: 18px;
+}
+#showcase{
+    background-image: url('../images/Campus.jpg');
+    background-position: center;
+    min-height: 300px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+#showcase h1{
+    color: #FFBA00;
+    font-size: 25px;
+    line-height: 1.6em;
+    padding-top: 30px;
 }
 
