--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -118,9 +118,10 @@ image{
     text-align: center;
 }
 #showcase h1{
-    color: #FFBA00;
+    color: #ffffff;
     font-size: 25px;
     line-height: 1.6em;
-    padding-top: 30px;
+    padding-top: 40px;
 }
+
 
