--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -37,6 +37,9 @@ image{
     border: 1px white solid;
     border-radius: 5px;
 }
+.topText:hover a{
+    transform: scale(.98);
+}
 .container-colum{
     width: 30%;
     float: right;
