--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -29,8 +29,9 @@ image{
     overflow: hidden;
 }
 .topText a{
+    text-decoration: none;
     display: inline-block;
-    padding: 8px 24px;
+    padding: 6px 18px;
     cursor: pointer;
     background-color: transparent;
     color: white;
