--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -61,6 +61,10 @@ image{
     padding: 5px;
     border-radius: 15px;
     align-self: flex-start;
+    transition: transform 0.2s ease-in;
+}
+.box-1:hover {
+    transform: translateX(-15px);
 }
 .box-1 a{
     list-style: none;
@@ -74,6 +78,10 @@ image{
     padding: 5px;
     border-radius: 15px;
     align-self: flex-start;
+    transition: transform 0.2s ease-in;
+}
+.box-2:hover {
+    transform: translateX(-15px);
 }
 .box-2 a{
     list-style: none;
@@ -87,6 +95,10 @@ image{
     padding: 5px;
     border-radius: 15px;
     align-self: flex-start;
+    transition: transform 0.2s ease-in;
+}
+.box-3:hover {
+    transform: translateX(-15px);
 }
 .box-3 a{
     list-style: none;
@@ -100,6 +112,10 @@ image{
     padding: 5px;
     border-radius: 15px;
     align-self: flex-start;
+    transition: transform 0.2s ease-in;
+}
+.box-4:hover {
+    transform: translateX(-15px);
 }
 .box-4 a{
     list-style: none;
