--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -12,11 +12,6 @@ image{
     color: rgb(0, 0, 0);
     padding: 10px;
 }
-#main-footer{
-    color: #FFBA00;
-    text-align:center;
-    font-size: 13px;
-}
 #main-body{
     background-color:#C41E3A;
     font-family: Arial, Helvetica, sans-serif;
@@ -41,18 +36,13 @@ image{
 .nested {
     display: grid;
     grid-gap: 2.5em;
-
 }
 .nested > div{
     border-left: #ffffff 2px double;
     padding-left: 6px;
-
 }
 .topText {
     animation: slideInfromBottom 1s ease-in;
-}
-#showcasetext {
-    animation: slideInfromLeft 1s ease-in;
 }
 .topText:hover a{
     transform: scale(.98);
@@ -131,6 +121,8 @@ image{
     list-style: none;
     color: #FFBA00;
 }
+
+     /*Top Navigation Bar*/
 .navbar{
     border-top: 2px #FFBA00 solid;
     border-bottom: 2px #FFBA00 solid;
@@ -161,10 +153,26 @@ image{
     justify-content: center;
     height: 100%;
 }
+
+#main-footer{
+    color: #FFBA00;
+    text-align:center;
+    font-size: 13px;
+}
+
+     /*Bottom Navigation Bar*/
 .bottomnavbar{
     border-bottom: 2px #FFBA00 solid;
     padding: 10px;
     height: 45px;
+}
+.bottomnavcontainer{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 40px;
+    display: flex;
+    justify-content: center;
+    height: 100%;
 }
 .bottomnavbar ul{
     list-style-type: none;
@@ -179,14 +187,9 @@ image{
     margin: 0 10px;
     font-size: 14px;
 }
-.bottomnavcontainer{
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 40px;
-    display: flex;
-    justify-content: center;
-    height: 100%;
-}
+
+
+     /* Showcase */
 #showcase{
     background-image: url('../images/Campus.jpg');
     background-position: center;
@@ -215,8 +218,13 @@ image{
     font-size: 20px;
     text-shadow: -1px 1px 0 #FFBA00;
     line-height: 1.6em;
-    padding-top: 10px;
+    padding-top: 10px
 }
+#showcasetext {
+    animation: slideInfromLeft 1s ease-in;
+}
+
+     /* Animation */
 @keyframes slideInfromLeft {
     0% {
         transform: translateX(-100%);
